Charts# better previous icon

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -342,6 +342,8 @@
 }
 .paging-toolbar .x-tbar-page-prev:before {
 	content: '\f04b';
+	transform: rotate(180deg);
+	display: block;
 }
 .paging-toolbar .x-tbar-page-next:before {
 	content: '\f04b';
