--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -13,9 +13,14 @@
 		* Checkbox.......................checkbox adjustments
 		* Grids..........................Ext grids
 			* Attribute container........declarations for table with attributes (chart or choropleth creation)
+			* Attribute configuration
+			* Advanced chart configuration
 		* Charts.........................declarations for panel with charts
 			* Common panel parts
 			* Sidebar charts
+			* Chart panel header
+			* Chart panel header tools
+			* Tables
 
 	* COMMON LAYOUT COMPONENTS
 		* Header.........................declarations of header toolbars
@@ -104,6 +109,50 @@
 	border: 0 !important;
 }
 
+/* TODO move button declarations to buttons  */
+.newDesign #loginwindow .x-btn {
+	background: none;
+	border-color: rgb(65,69,81);
+	border-style: solid;
+	border-width: 1px !important;
+	border-radius: .15rem;
+	transition: background .3s ease-in-out, border .3s ease-in-out;
+	width: 120px !important;
+}
+.newDesign #loginwindow .x-btn-default-small-noicon button {
+	line-height: 2rem;
+}
+.newDesign #loginwindow .x-btn-over,
+.newDesign #loginwindow .x-btn-focus {
+	background: rgba(65,69,81,.25);
+}
+.newDesign #loginwindow .x-btn-focus {
+	box-shadow: 0 0 2px 1px rgba(55,125,166,1);
+}
+.newDesign #loginwindow .x-btn:first-child {
+	border-color: rgb(33,38,53);
+	background: rgb(33,38,53);
+	right: 140px;
+}
+.newDesign #loginwindow .x-btn-over.x-btn:first-child,
+.newDesign #loginwindow .x-btn-focus.x-btn:first-child {
+	border-color: transparent;
+	background: rgba(33,38,53, .9);
+}
+
+.newDesign #loginwindow .x-btn:last-child {
+
+}
+.newDesign #loginwindow .x-btn-inner {
+	color: #eee;
+	font-size: .95rem;
+	font-weight: 500;
+	line-height: 1.2;
+}
+.newDesign #loginwindow .x-btn:last-child .x-btn-inner {
+	color: rgb(33,38,53);
+}
+
 /* TODO move form declarations to forms*/
 .newDesign #loginwindow .x-form-field {
 	background: rgba(224,227,231,1);
@@ -162,6 +211,13 @@
 	font-size: .75rem;
 	font-weight: 400;
 	text-transform: uppercase;
+}
+.newDesign .configform label.form-section-title {
+	width: 100%;
+	color: rgb(65,69,81);
+	padding: 20px 0 10px;
+	font-size: 1rem;
+	text-transform: none;
 }
 .newDesign.x-border-box .configform .x-form-trigger {
 	background: rgba(233,235,237,1);
@@ -375,7 +431,6 @@
 /* === Grids =========================================== */
 .newDesign .x-grid-body {
 	border: 0 !important;
-	margin-top: 3px;
 }
 
 /* Attribute container */
@@ -396,6 +451,11 @@
 }
 .newDesign .x-window .attribute-container .x-panel-body-default {
 	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.newDesign .nonnumeric-attribute {
+	display: none;
 }
 /*.newDesign .attribute-container .x-column-header {*/
 	/*border: 0;*/
@@ -422,9 +482,33 @@
 	overflow-y: auto;
 }
 
+/* Advanced chart configuration */
+.newDesign .thematic-maps-settings .x-fieldset {
+	border: 1px solid rgba(204,207,211,1);
+}
+.newDesign .thematic-maps-settings .x-fieldset-header .x-tool {
+	display: none;
+}
+.newDesign .thematic-maps-settings .x-fieldset-header-text {
+	color: rgb(106,110,120);
+	font-size: .9rem;
+	line-height: 1.5;
+	margin-right: .5rem;
+}
+.newDesign .thematic-maps-settings .x-fieldset-header-text:before {
+	content: "\f0d8";
+	font-size: 1rem;
+	font-family: "FontAwesome";
+	margin: 0 .5rem;
+}
+.newDesign .thematic-maps-settings .x-fieldset-collapsed .x-fieldset-header-text:before {
+	content: "\f0d7";
+}
+
 /* === Charts ========================================= */
 .newDesign #app-reports-paging {
 	border-bottom: 0;
+	background: #f4f3ef;
 }
 /* Common panel parts */
 .newDesign .x-panel-header {
@@ -438,12 +522,106 @@
 }
 
 /* Sidebar charts */
-.newDesign #app-reports-accordeon .x-panel-header {
-	background: rgba(204,207,211,1) !important;
-	transition: background .3s ease-in-out;
+.newDesign .x-toolbar .x-toolbar-separator {
+	border-left: 1px solid #aaa;
+	border-right: 0;
 }
-.newDesign #app-reports-accordeon .x-panel-header:hover {
-	background: rgba(204,207,211,.8) !important;
+.newDesign .paging-toolbar .x-toolbar-item:hover {
+	background: none;
+}
+.newDesign .paging-toolbar .x-btn-split-right,
+.newDesign .paging-toolbar .x-btn-over .x-btn-split-right {
+	/*background: none !important;*/
+	width: 30px;
+}
+.newDesign .chart-panel {
+	border-top: 1px solid rgba(194,197,201,1);
+}
+/* Chart panel header */
+.newDesign .chart-panel .x-panel-header {
+	background: rgba(204,207,211,.7) !important;
+	transition: background .3s ease-in-out;
+	padding: 0 5px 0 0;
+}
+.newDesign .chart-panel .x-panel-header:hover {
+	background: rgba(204,207,211,1) !important;
+}
+.newDesign .chart-panel .x-panel-header-text-container {
+	left: 28px !important;
+}
+.newDesign .chart-panel .x-panel-header-text {
+	font-size: .85rem;
+	font-weight: 600;
+	line-height: 1.3;
+	color: rgba(65,69,81,1);
+}
+
+/* Chart panel header tools */
+.newDesign .chart-panel .x-panel-header .x-tool {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-collapse,
+.newDesign .chart-panel.panel-snapshots .x-panel-header .x-tool {
+	left: 3px !important;
+}
+.newDesign .chart-panel .x-panel-header .tool-icon:before,
+.newDesign .chart-panel.panel-snapshots .x-panel-header .x-tool:before {
+	font-family: "FontAwesome";
+	font-size: 1rem;
+	position: absolute;
+	color: rgba(65,69,81,.8);
+	transition: color .3s ease-in-out;
+}
+.newDesign .chart-panel .x-panel-header .tool-icon:hover:before,
+.newDesign .chart-panel.panel-snapshots .x-panel-header .x-tool:hover:before {
+	color: rgba(186,65,91,1);
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-settings:before {
+	content: "\f1de";
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-help:before {
+	content: "\f022";
+	top: 3px;
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-export-csv:before {
+	content: "\f15c";
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-export-png:before {
+	content: "\f1c5";
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-snapshot:before {
+	content: "\f030";
+}
+.newDesign .chart-panel.x-panel-collapsed .x-panel-header .tool-chart-collapse:before,
+.newDesign .chart-panel.panel-snapshots.x-panel-collapsed .x-panel-header .x-tool:before {
+	content: "\f107";
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-collapse:before,
+.newDesign .chart-panel.panel-snapshots .x-panel-header .x-tool:before {
+	content: "\f106";
+	font-weight: bold;
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-close:before {
+	font-family: "Open Sans";
+	content: "\00d7";
+	font-size: 1.4rem;
+	font-weight: 600;
+	top: -6px;
+}
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-gear,
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-help,
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-collapse,
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-print,
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-save,
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-close,
+.newDesign .chart-panel .x-panel-header .x-tool-collapse-top,
+.newDesign .chart-panel .x-panel-header .x-tool-over .x-tool-collapse-top,
+.newDesign .chart-panel .x-panel-header .x-tool-expand-bottom,
+.newDesign .chart-panel .x-panel-header .x-tool-over .x-tool-expand-bottom {
+	background: transparent !important;
+	position: absolute;
 }
 
 /* Tables */
@@ -465,7 +643,7 @@
 	background: rgba(224,227,231,.8);
 }
 .newDesign .x-column-header-text {
-	font-size: .85rem;
+	font-size: .75rem;
 }
 .newDesign .x-grid-header-ct {
 	border: 1px solid #ddd;
@@ -1060,31 +1238,6 @@
 	right: -22px;
 }
 
-/* Accordion =============== */
-.newDesign .x-box-inner {
-	background: none;
-}
-
-.newDesign .x-accordion-hd {
-	border-color: white !important;
-}
-
-.newDesign .x-accordion-hd .x-panel-header-text {
-	color: #333;
-}
-
-.newDesign .x-accordion-body {
-	border: 0;
-}
-
-.newDesign .x-accordion-hd .x-tool-over .x-tool-collapse-top {
-	background-position: 50% 50%;
-}
-
-.newDesign .x-accordion-hd .x-tool-over .x-tool-expand-bottom {
-	background-position: 50% 50%;
-}
-
 /* Tables ================ */
 .newDesign .x-grid-with-row-lines {
 	border: 0;
@@ -1155,13 +1308,6 @@
 	color: #555;
 	font-family: "Open Sans", sans-serif;
 	font-size: 12px;
-}
-
-.newDesign .form-section-title {
-	width: 100%;
-	padding: 20px 0 10px;
-	font-weight: 700;
-	color: #555;
 }
 
 /* Tabs ================= */
