--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -674,6 +674,9 @@
 	padding: 0 1.5rem 0 1rem;
 	z-index: 1;
 }
+.newDesign .geoserver-login #header {
+	z-index: 0;
+}
 .newDesign #header .menu {
 	margin: 0;
 	flex: 1;
