--- a/src/__new/js/view/settings/Settings.html
+++ b/src/__new/js/view/settings/Settings.html
@@ -2,7 +2,7 @@
     <div class="tool-window-header">
         <div class="tool-window-title">{{settings}}</div>
         <div class="tool-window-tools-container">
-            <div title="Close" class="floater-tool settings-close feature-info-close">
+            <div title="Close" class="floater-tool window-close settings-close">
                 &#x2716
             </div>
         </div>
