--- a/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.css
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.css
@@ -17,7 +17,9 @@
 body.mode-3d .tool-window.layer-tool-floater.open {
 	display: block;
 }
-
+.layer-tool-floater-header .tool-window-title {
+	font-size: 1rem;
+}
 .layer-tool-floater-body {
 	padding: .3rem;
 	height: calc(100% - 2.5rem);
