--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -5,14 +5,16 @@
 	color: #555;
 	display: none;
 	height: 15rem;
+	min-height: 12rem;
+	max-height: 20rem;
 	left: 100px;
 	position: absolute;
 	right: 100px;
 	resize: both;
 	overflow: auto;
-	min-width: 25rem;
+	min-width: 20rem;
 	width: 30rem;
-	max-width: 40rem;
+	max-width: 35rem;
 	z-index: 10000;
 }
 .fi-window.no-data {
@@ -43,6 +45,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	width: calc(100% - 45px);
+	font-size: .9rem;
 }
 .fi-window .feature-info-tools {
 	display: flex;
