--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
@@ -2,6 +2,10 @@
 	left: 17rem;
 	top: 10rem;
 	height: 12rem;
+	min-height: 12rem;
+	max-height: 16rem;
+	min-width: 16rem;
+	max-width: 24rem;
 }
 
 #floater-map-tools-widget .floater-body {
