--- a/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.css
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.css
@@ -21,7 +21,7 @@ body.mode-3d .tool-window.layer-tool-floater.open {
 	display: block;
 }
 .layer-tool-floater-header .tool-window-title {
-	font-size: 1rem;
+	font-size: .9rem;
 }
 .layer-tool-floater-body {
 	padding: .3rem;
