--- a/src/__new/js/view/settings/Settings.css
+++ b/src/__new/js/view/settings/Settings.css
@@ -8,7 +8,11 @@
 
 	display: none;
 	height: 25rem;
+	min-height: 20rem;
+	max-height: 35rem;
 	width: 35rem;
+	min-width: 25rem;
+	max-width: 45rem;
 	padding: .2rem .5rem .5rem;
 	position: absolute;
 	top: 8rem;
