--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
@@ -9,6 +9,8 @@
     min-width: 22rem;
     max-width: 40rem;
     height: 32rem;
+    min-height: 20rem;
+    max-height: 35rem;
 }
 
 #floater-evaluation-widget .floater-body {
