--- a/src/__new/js/view/widgets/SharingWidget/SharingWidget.css
+++ b/src/__new/js/view/widgets/SharingWidget/SharingWidget.css
@@ -4,6 +4,8 @@
 	min-width: 30rem;
 	max-width: 40rem;
 	height: 30rem;
+	min-height: 20rem;
+	max-height: 35rem;
 }
 #floater-sharing .floater-body {
 	padding: 1rem 1rem 1rem .5rem;
