--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
@@ -2,8 +2,10 @@
 	display: none;
 	left: 10rem;
 	top: 10rem;
+	min-width: 260px;
 	max-width: 40rem;
-	min-height: 4rem;
+	min-height: 10rem;
+	max-height: 25rem;
 	width: 260px;
 	background: rgba(255,255,255,.9);
 }
