--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
@@ -3,7 +3,7 @@
 	border-bottom: 1px solid #ddd;
 	cursor: pointer;
 	display: flex;
-	line-height: 2;
+	line-height: 1.7;
 	transition: background .3s ease-in-out;
 }
 .map-tool-trigger:hover {
@@ -40,68 +40,7 @@
 	fill: rgb(106,110,120);
 }
 
-/* tool toggle */
-.map-tool-trigger-toggle {
-	text-align: right;
-	padding-right: .2rem;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-}
+/* icons container */
+.map-tool-trigger-icons {
 
-/* TODO move this to seperate class*/
-.toggle-switch {
-	position: relative;
-	display: inline-block;
-	width: 26px;
-	height: 15px;
-}
-
-.toggle-switch input {display:none;}
-
-.toggle-switch-slider {
-	position: absolute;
-	cursor: pointer;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: rgb(189,192,197);
-	-webkit-transition: .4s;
-	transition: .4s;
-}
-
-.toggle-switch-slider:before {
-	position: absolute;
-	content: "";
-	height: 11px;
-	width: 11px;
-	left: 2px;
-	bottom: 2px;
-	background-color: white;
-	-webkit-transition: .4s;
-	transition: .4s;
-}
-
-input:checked + .toggle-switch-slider {
-	background-color: rgba(186,65,91,1);
-}
-
-input:focus + .toggle-switch-slider {
-	box-shadow: 0 0 1px rgba(186,65,91,1);
-}
-
-input:checked + .toggle-switch-slider:before {
-	-webkit-transform: translateX(11px);
-	-ms-transform: translateX(11px);
-	transform: translateX(11px);
-}
-
-/* Rounded sliders */
-.toggle-switch-slider.round {
-	border-radius: 34px;
-}
-
-.toggle-switch-slider.round:before {
-	border-radius: 50%;
 }
