--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.html
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.html
@@ -3,10 +3,6 @@
 		<div class="map-tool-icon"></div>
 		<div class="map-tool-trigger-label-title">{{label}}</div>
 	</div>
-	<div class="map-tool-trigger-toggle">
-		<label class="toggle-switch">
-			<input type="checkbox">
-			<span class="toggle-switch-slider round"></span>
-		</label>
+	<div class="map-tool-trigger-icons">
 	</div>
 </div>
