Feature info window - export button style

--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -135,7 +135,9 @@
 	background: rgba(173,39,56,.2);
 }
 #export-feature-info-csv:before {
-	content: url('../../../../img/table.png');
+	content: "\f1c3";
+	font-family: "FontAwesome";
+	font-size: 1rem;
 }
 
 
